--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,44 +3,32 @@
 }
 .one {
     height: 300px;
-}
-.one img{
-    width: 100%;
+    background-color: rgb(47, 255, 0);
 }
 
 .two {
     height: 300px;
-}
-.two img{
-    width: 100%;
+    background-color: rgb(0, 255, 255);
 }
 
 .three {
     height: 300px;
-}
-.three img{
-    width: 100%;
+    background-color: rgb(255, 0, 217);
 }
 
 .four {
     height: 300px;
-}
-.four img{
-    width: 100%;
+    background-color: blue;
 }
 
 .five {
     height: 300px;
-}
-.five img{
-    width: 100%;
+    background-color: rgb(242, 255, 0);
 }
 
 .six {
     height: 300px;
-}
-.six img{
-    width: 100%;
+    background-color: rgb(255, 119, 0);
 }
 
 .slick-dots li{
